# idk-overlay

./: .gitignore  AGENTS.md  README.md  meson.build  meson_options.txt
docs/: FEATURES.md
include/: idk_egl.h  idk_gl.h  idk_gl_loader.h  shader.h
include/core/: compositor.h  compositor_common.h  compositor_egl.h  compositor_vk.h  log.h  transport.h
include/gl/: gl_loader.h  shader.h  shader_loader.h
include/hook/: egl.h  glx.h  graphic_hooks.h  hook_plugin.h  hook_util.h  keycodes.h  overlay.h  vulkan.h  wayland_input.h  wayland_input_types.h  wayland_internal.h  x11_input.h  x11_internal.h
include/public/: idk_fs.h  idk_ipc.h
include/render/: receive.h
include/shaders/: vk_shaders.h
include/webview/: groupconfig.h  input_receiver.h  manager.h  rhi_texture_extractor.h  utils.h  webview.h
scripts/: embed_shaders.py
shaders/: overlay_410.frag
src/: compositor.c  compositor.h  egl_hook.c  gl_hook.c  gl_loader.c  idk-client.c  idk_fs.c  idk_gl_hook.c  idk_send_frame.c  idk_shim.c  inject.c  ipc.c  overlay.c  overlay_shader.h  receive.c  render.c  vulkan_hook.c
src/cli/: meson.build
src/cli/broker/: main.c  meson.build
src/cli/inject/: inject.c  meson.build
src/cli/webview/: groupconfig.cpp  groupconfig.h  idk-client-qt.conf  idk-overlay.conf  idk-webview.conf  input_receiver.cpp  input_receiver.h  main.cpp  manager.cpp  manager.h  meson.build  rhi_texture_extractor.cpp  webview.cpp  webview.h
src/cli/webview/config/: groupconfig.cpp
src/cli/webview/input/: input_receiver.cpp
src/cli/webview/view/: rhi_texture_extractor.cpp  webview.cpp
src/core/: compositor.c  compositor_common.c  compositor_egl.c  compositor_vk.c  log.c  tp_shm.c  tp_socket.c  transport.c
src/framesource/: idk-send-frame.c
src/gl/: egl_hook.c  gl_hook.c  gl_loader.c  shader_loader.c
src/hook/: egl_hook.c  glx_hook.c  idk_overlay.json.in  overlay.c  vulkan_hook.c  vulkan_layer.c  wayland_input.c
src/hook/wayland/: wayland_input.c  wayland_kb.c  wayland_ptr.c  wayland_scan.c  wayland_sidecar.c  wayland_socket.c
src/hook/x11/: x11_input.c  x11_kb.c  x11_ptr.c
src/inject/: inject.c  overlay.c  vulkan_hook.c
src/ipc/: ipc.c
src/lib/: idk_fs.c  meson.build
src/render/: meson.build  receive.c  render.c
src/shaders/: meson.build  overlay_120.frag  overlay_120.vert  overlay_130.frag  overlay_130.vert  overlay_300_es.frag  overlay_300_es.vert  overlay_410.vert  overlay_vk.frag  overlay_vk.vert
src/shim/: elfhacks.c  idk_gl_hook.c  idk_shim.c  meson.build
subprojects/: syringe.wrap
subprojects/idk-client/: meson.build
subprojects/idk-client-qt/: groupconfig.h  main.cpp  manager.cpp  manager.h  meson.build  webview.cpp  webview.h
subprojects/idk-client/include/: idk_client.h  idk_ipc.h
subprojects/idk-client/src/: idk_client.c
subprojects/idk-framesource/: meson.build
subprojects/idk-framesource/include/: idk_ipc.h
subprojects/idk-framesource/src/: idk_fs.c
subprojects/idk-webview/: idk-client-qt.conf  manager.cpp  manager.h  meson.build  rhi_texture_extractor.cpp
subprojects/packagefiles/syringe/: meson.build
subprojects/packagefiles/syringe/src/dotnet/: syringe_dotnet.c  syringe_profiler.cpp
tests/: meson.build  test_abstract_socket.c  test_ack.c  test_compositor_api.c  test_compositor_path.c  test_frame_header.c  test_idk_fs.c  test_input.c  test_ipc.c  test_resize.c  test_runner.h  test_shm_cache.c  test_vendor.c  test_wire_protocol.c
tools/idk-webview/: manager.cpp  webview.cpp
